--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,25 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#65c89b",
-        "activityBar.activeBorder": "#945bc4",
-        "activityBar.background": "#65c89b",
+        "activityBar.activeBackground": "#f7d2b1",
+        "activityBar.activeBorder": "#12ad5b",
+        "activityBar.background": "#f7d2b1",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#945bc4",
+        "activityBarBadge.background": "#12ad5b",
         "activityBarBadge.foreground": "#e7e7e7",
-        "editorGroup.border": "#65c89b",
-        "panel.border": "#65c89b",
-        "sash.hoverBorder": "#65c89b",
-        "sideBar.border": "#65c89b",
-        "statusBar.background": "#42b883",
+        "sash.hoverBorder": "#f7d2b1",
+        "statusBar.background": "#f2b883",
         "statusBar.foreground": "#15202b",
-        "statusBarItem.hoverBackground": "#359268",
-        "statusBarItem.remoteBackground": "#42b883",
+        "statusBarItem.hoverBackground": "#ed9e55",
+        "statusBarItem.remoteBackground": "#f2b883",
         "statusBarItem.remoteForeground": "#15202b",
-        "titleBar.activeBackground": "#42b883",
+        "titleBar.activeBackground": "#f2b883",
         "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#42b88399",
+        "titleBar.inactiveBackground": "#f2b88399",
         "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#42b883"
+    "peacock.color": "#f2b883"
 }
